@@ -95,6 +95,10 @@ Other Changes
 
   Ref #5392
 
+* Added the ``generate-toml-config`` option.
+
+  Ref #5462
+
 * Fix false negative for ``bad-string-format-type`` if the value to be formatted is passed in
   as a variable holding a constant.
 
