@@ -12,6 +12,7 @@ from pylint.config.callback_actions import (
     _DoNothingAction,
     _ErrorsOnlyModeAction,
     _FullDocumentationAction,
+    _GenerateConfigFileAction,
     _GenerateRCFileAction,
     _ListCheckGroupsAction,
     _ListConfidenceLevelsAction,
@@ -104,6 +105,7 @@ group are mutually exclusive.",
                         "callback": Run._not_implemented_callback,
                         "group": "Commands",
                         "help": "Specify a configuration file to load.",
+                        "hide_from_config_file": True,
                     },
                 ),
                 (
@@ -114,6 +116,7 @@ group are mutually exclusive.",
                         "callback": Run._not_implemented_callback,
                         "group": "Commands",
                         "help": "Specify an output file.",
+                        "hide_from_config_file": True,
                     },
                 ),
                 (
@@ -135,6 +138,7 @@ group are mutually exclusive.",
                         "group": "Commands",
                         "help": "Display a help message for the given message id and "
                         "exit. The value may be a comma separated list of message ids.",
+                        "hide_from_config_file": True,
                     },
                 ),
                 (
@@ -146,6 +150,7 @@ group are mutually exclusive.",
                         "group": "Commands",
                         "help": "Display a list of all pylint's messages divided by whether "
                         "they are emittable with the given interpreter.",
+                        "hide_from_config_file": True,
                     },
                 ),
                 (
@@ -157,6 +162,7 @@ group are mutually exclusive.",
                         "group": "Commands",
                         "help": "Display a list of what messages are enabled, "
                         "disabled and non-emittable with the given configuration.",
+                        "hide_from_config_file": True,
                     },
                 ),
                 (
@@ -167,6 +173,7 @@ group are mutually exclusive.",
                         "callback": Run._not_implemented_callback,
                         "group": "Commands",
                         "help": "List pylint's message groups.",
+                        "hide_from_config_file": True,
                     },
                 ),
                 (
@@ -177,6 +184,7 @@ group are mutually exclusive.",
                         "kwargs": {"Run": self},
                         "group": "Commands",
                         "help": "Generate pylint's confidence levels.",
+                        "hide_from_config_file": True,
                     },
                 ),
                 (
@@ -187,6 +195,7 @@ group are mutually exclusive.",
                         "callback": Run._not_implemented_callback,
                         "group": "Commands",
                         "help": "List available extensions.",
+                        "hide_from_config_file": True,
                     },
                 ),
                 (
@@ -197,6 +206,7 @@ group are mutually exclusive.",
                         "callback": Run._not_implemented_callback,
                         "group": "Commands",
                         "help": "Generate pylint's full documentation.",
+                        "hide_from_config_file": True,
                     },
                 ),
                 (
@@ -210,6 +220,21 @@ group are mutually exclusive.",
                         "the current configuration. You can put other options "
                         "before this one to get them in the generated "
                         "configuration.",
+                        "hide_from_config_file": True,
+                    },
+                ),
+                (
+                    "generate-toml-config",
+                    {
+                        "action": _GenerateConfigFileAction,
+                        "kwargs": {"Run": self},
+                        "callback": Run._not_implemented_callback,
+                        "group": "Commands",
+                        "help": "Generate a sample configuration file according to "
+                        "the current configuration. You can put other options "
+                        "before this one to get them in the generated "
+                        "configuration. The config is in the .toml format.",
+                        "hide_from_config_file": True,
                     },
                 ),
                 (
@@ -222,6 +247,7 @@ group are mutually exclusive.",
                         "help": "In error mode, checkers without error messages are "
                         "disabled and for others, only the ERROR messages are "
                         "displayed, and no reports are done by default.",
+                        "hide_from_config_file": True,
                     },
                 ),
                 (
@@ -233,6 +259,7 @@ group are mutually exclusive.",
                         "short": "v",
                         "help": "In verbose mode, extra non-checker-related info "
                         "will be displayed.",
+                        "hide_from_config_file": True,
                     },
                 ),
                 (
@@ -243,6 +270,7 @@ group are mutually exclusive.",
                         "callback": Run._not_implemented_callback,
                         "help": "Load and enable all available extensions. "
                         "Use --list-extensions to see a list all available extensions.",
+                        "hide_from_config_file": True,
                     },
                 ),
                 (
@@ -253,6 +281,7 @@ group are mutually exclusive.",
                         "callback": Run._not_implemented_callback,
                         "help": "Show more verbose help.",
                         "group": "Commands",
+                        "hide_from_config_file": True,
                     },
                 ),
             ),
