@@ -51,6 +51,7 @@ install_requires =
     isort>=4.2.5,<6
     mccabe>=0.6,<0.8
     tomli>=1.1.0;python_version<"3.11"
+    tomlkit>=0.10.1
     colorama;sys_platform=="win32"
     typing-extensions>=3.10.0;python_version<"3.10"
 python_requires = >=3.7.2
@@ -133,6 +134,9 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-git.*]
+ignore_missing_imports = True
+
+[mypy-tomlkit]
 ignore_missing_imports = True
 
 [mypy-sphinx.*]
